--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@
 	text-align: center;
 	margin: 20px;
 	font-size: 50px;
+	font-family: 'Rubik Bubbles', cursive;
 }
 
 .move {
 	color: white;
 	text-align: center;
 	font-size: 25px;
+	font-family: 'Oswald', sans-serif;
 }
 
 
